--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^1.0.6",
     "@react-md/icon": "^5.1.3",
     "@react-md/material-icons": "^5.1.3",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
